--- a/views/stattracker2.jade
+++ b/views/stattracker2.jade
@@ -4,6 +4,7 @@ block inlineScripts
 	script.
 		var doIt = function() {
 			$.get("/stattracker/linescore2/" + team.teamId, function(response) {
+				$('.teamStats').html(response.teamStatsHTML);
 				$('li.playerDiv').css('opacity','1');
 				$('.preview').quicksand( $(response.html).find('.preview li'), { adjustHeight: 'dynamic', adjustWidth: false, retainExisting: false } );
 				$('.inProgress').quicksand( $(response.html).find('.inProgress li'), { adjustHeight: 'dynamic', adjustWidth: false, retainExisting: false } );
@@ -26,6 +27,10 @@ block inlineScripts
 
 block content
 	div.widget
+		h2 Stats
+		div.teamStats
+	div.widget
+		h2 Players
 		include partials/stattrackerDiv
 
 	| <script type="text/javascript" >
