--- a/views/partials/stattrackerDiv.jade
+++ b/views/partials/stattrackerDiv.jade
@@ -17,15 +17,15 @@ mixin stattrackerDiv(previewPlayers, inProgressPlayers, finalPlayers, ready)
 				span Today:
 			div(style="display:inline-block;width:87%;height:100%;")
 				mixin stat(player.dailyStats, 'H', 'h', '9%', '')
-				mixin stat(player.dailyStats, 'AB', 'ab', '9%', 'statAlt')
+				mixin stat(player.dailyStats, 'AB', 'ab', '9%', 'altBG')
 				mixin stat(player.dailyStats, 'R', 'r', '9%')
-				mixin stat(player.dailyStats, 'HR', 'hr', '9%', 'statAlt')
+				mixin stat(player.dailyStats, 'HR', 'hr', '9%', 'altBG')
 				mixin stat(player.dailyStats, 'RBI', 'rbi', '9%')
-				mixin stat(player.dailyStats, 'K', 'so', '9%', 'statAlt')
+				mixin stat(player.dailyStats, 'K', 'so', '9%', 'altBG')
 				mixin stat(player.dailyStats, 'BB', 'bb', '9%')
-				mixin stat(player.dailyStats, 'SB', 'sb', '9%', 'statAlt')
+				mixin stat(player.dailyStats, 'SB', 'sb', '9%', 'altBG')
 				mixin stat(player.dailyStats, 'CS', 'cs', '9%')
-				mixin stat(player.dailyStats, '2B', 'h2b', '9%', 'statAlt')
+				mixin stat(player.dailyStats, '2B', 'h2b', '9%', 'altBG')
 				mixin stat(player.dailyStats, '3B', 'h3b', '9%')
 
 	mixin seasonStats(player)
@@ -34,17 +34,17 @@ mixin stattrackerDiv(previewPlayers, inProgressPlayers, finalPlayers, ready)
 				span Season:
 			div(style="display:inline-block;width:87%;height:100%;vertical-align:middle")
 				-if(player.seasonStats)
-					mixin stat(player.seasonStats, 'OBP', 'obp', '9%', 'statAlt')
+					mixin stat(player.seasonStats, 'OBP', 'obp', '9%', 'altBG')
 					mixin stat(player.seasonStats, 'AB', 'ab', '9%')
-					mixin stat(player.seasonStats, 'R', 'r', '9%', 'statAlt')
+					mixin stat(player.seasonStats, 'R', 'r', '9%', 'altBG')
 					mixin stat(player.seasonStats, 'HR', 'hr', '9%')
-					mixin stat(player.seasonStats, 'RBI', 'rbi', '9%', 'statAlt')
+					mixin stat(player.seasonStats, 'RBI', 'rbi', '9%', 'altBG')
 					mixin stat(player.seasonStats, 'K', 'so', '9%')
-					mixin stat(player.seasonStats, 'BB', 'bb', '9%', 'statAlt')
+					mixin stat(player.seasonStats, 'BB', 'bb', '9%', 'altBG')
 					mixin stat(player.seasonStats, 'SB', 'sb', '9%')
-					mixin stat(player.seasonStats, 'CS', 'cs', '9%', 'statAlt')
+					mixin stat(player.seasonStats, 'CS', 'cs', '9%', 'altBG')
 					mixin stat(player.seasonStats, '2B', 'h2b', '9%')
-					mixin stat(player.seasonStats, '3B', 'h3b', '9%', 'statAlt')
+					mixin stat(player.seasonStats, '3B', 'h3b', '9%', 'altBG')
 
 	mixin gamePreview(player)
 		div
