--- a/views/partials/freeAgentTable.jade
+++ b/views/partials/freeAgentTable.jade
@@ -47,10 +47,14 @@ mixin playerTable(players, _isHitter)
 						th(style="width:"+category.width)= category.categoryName
 
 			tbody
+				-var count = -1;
 				-each player in players
-					tr
+					-count++;
+					-var bgClass = count % 2 == 0 ? 'altBG' : '';
+					tr(class=bgClass)
 						td(style="width:40%")
-							a.name(href="/player/"+player._id)= player.name_display_first_last
+							a.name(href="/player/"+player._id style="font-size:20px")= player.name_display_first_last
+							span(style="padding-left:10px;font-size:12px")= player.position_txt + " - " + player.team_name
 						-if(player.stats[0])
 							-if(_isHitter)
 								td.stats(style="width:10%")= player.stats[0].ab
