--- a/views/draft.jade
+++ b/views/draft.jade
@@ -86,7 +86,10 @@ block content
 					h2 You are currently on the clock!
 					h3= "The deadline for your pick is " + moment(current_pick.deadline).calendar()
 					input(type="radio" name="draft_radio" value="pid_radio" checked="true")
-					label(for='pid_radio') By MLB Player Id
+					label(style="font-size:25px" for='pid_radio') By MLB Player Id
+					span(style="padding-left:8px")
+						a(href="/gm/draft/help")
+							| How do I draft by MLB Player Id?
 					br
 					input(type="radio" name="draft_radio" value="name_radio")
 					label(for='name_radio') By Player Name
