--- a/views/partials/playerStatByDate.jade
+++ b/views/partials/playerStatByDate.jade
@@ -1,55 +1,91 @@
 include teamLink
 
 table(style="width:100%")
-	thead
-		th(style="width:40%") Date
-		th(style="width:60%") Team
-		-if(player.primary_position == 1)
-			th.stats IP
-			th.stats ER
-			th.stats GO/AO
-			th.stats K
-			th.stats BB
-			th.stats K/9
-			th.stats K/BB
-			th.stats WHIP
-			th.stats ERA
-			th.stats W
-			th.stats SV
+	tbody
+		tr(style="border-bottom:1px solid white")
+			td
+				div(style="width:10%;display:inline-block;text-align:center") Date
+				div(style="width:20%;display:inline-block;text-align:center") Team
+				div(style="width:10%;display:inline-block") Status
+				div(style="width:60%;display:inline-block")
+					-if(player.primary_position == 1)
+						div.stats(style="width:7%;display:inline-block") IP
+						div.stats(style="width:7%;display:inline-block") ER
+						div.stats(style="width:7%;display:inline-block") GO/AO
+						div.stats(style="width:7%;display:inline-block") K
+						div.stats(style="width:7%;display:inline-block") BB
+						div.stats(style="width:7%;display:inline-block") K/9
+						div.stats(style="width:7%;display:inline-block") K/BB
+						div.stats(style="width:7%;display:inline-block") WHIP
+						div.stats(style="width:7%;display:inline-block") ERA
+						div.stats(style="width:7%;display:inline-block") W
+						div.stats(style="width:7%;display:inline-block") SV
+					-else
+						div.stats(style="width:7%;display:inline-block") AB
+						div.stats(style="width:7%;display:inline-block") H
+						div.stats(style="width:7%;display:inline-block") BB
+						div.stats(style="width:7%;display:inline-block") HR
+						div.stats(style="width:8%;display:inline-block") R
+						div.stats(style="width:8%;display:inline-block") RBI
+						div.stats(style="width:8%;display:inline-block") SB
+						div.stats(style="width:8%;display:inline-block") CS
+						div.stats(style="width:8%;display:inline-block") 2B
+						div.stats(style="width:8%;display:inline-block") 3B
+						div.stats(style="width:8%;display:inline-block") GO
+						div.stats(style="width:8%;display:inline-block") AO
+						div.stats(style="width:8%;display:inline-block") SO
 div(style="max-height:200px;overflow-y:scroll;")
 	table.hoverable(style="width:100%")
 		tbody
 			-var teamByDateArray = player.teamByDate.reverse()
 			-each d in teamByDateArray
 				tr
-					td(style="width:20%;text-align:center")= moment(d.date).format('l')
-					td(style="width:40%;text-align:center")
-						mixin teamLink(teamHash[d.team], true)
-					-if(d.stats)
-						-if(player.primary_position == 1)
-							-var innArray = d.stats.ip.split('.');
-							-var innings_pitched;
-							-if(isFinite(parseInt(innArray[0]))) {
-							-	innings_pitched = parseInt(innArray[0]);	
-							-} else {
-							-	innings_pitched = 0;
-							-}
-							-if(innArray.length > 1) {
-							-	innings_pitched += parseInt(innArray[1]) / 3;
-							-}
-							td.stats= numeral(innings_pitched).format("0.00")
-							td.stats= d.stats.er
-							td.stats
-								- d.stats.ao = !d.stats.ao || d.stats.ao == 0 ? 1 : d.stats.ao
-								-var ratio = d.stats.go / d.stats.ao;
-								= numeral(ratio).format("0.00")
-							td.stats= d.stats.so
-							td.stats= d.stats.bb
-							td.stats
-								-var k9 = (d.stats.so * 9) / 
-								= numeral(d.stats.kPerNine).format("0.00")
-							td.stats= numeral(d.stats.kPerWalk).format("0.00")
-							td.stats= numeral(d.stats.whip).format("0.000")
-							td.stats= numeral(d.stats.era).format("0.000")
-							td.stats= d.stats.w
-							td.stats= d.stats.sv
+					td
+						div(style="width:10%;text-align:center;display:inline-block")= moment(d.date).format('l')
+						div(style="width:20%;text-align:center;display:inline-block")
+							mixin teamLink(teamHash[d.team], true)
+						div(style="width:10%;display:inline-block")= d.fantasy_status_code
+						div(style="display:inline-block;width:60%")
+							-if(d.stats)
+								-if(player.primary_position == 1)
+									-var innArray = d.stats.ip.split('.');
+									-var innings_pitched;
+									-if(isFinite(parseInt(innArray[0]))) {
+									-	innings_pitched = parseInt(innArray[0]);	
+									-} else {
+									-	innings_pitched = 0;
+									-}
+									-if(innArray.length > 1) {
+									-	innings_pitched += parseInt(innArray[1]) / 3;
+									-}
+									div(style="display:inline-block").stats= numeral(innings_pitched).format("0.00")
+									div(style="display:inline-block").stats= d.stats.er
+									div(style="display:inline-block").stats
+										- d.stats.ao = !d.stats.ao || d.stats.ao == 0 ? 1 : d.stats.ao
+										-var ratio = d.stats.go / d.stats.ao;
+										= numeral(ratio).format("0.00")
+									div(style="display:inline-block").stats= d.stats.so
+									div(style="display:inline-block").stats= d.stats.bb
+									div(style="display:inline-block").stats
+										-var k9 = (d.stats.so * 9) / 
+										= numeral(d.stats.kPerNine).format("0.00")
+									div(style="display:inline-block").stats= numeral(d.stats.kPerWalk).format("0.00")
+									div(style="display:inline-block").stats= numeral(d.stats.whip).format("0.000")
+									div(style="display:inline-block").stats= numeral(d.stats.era).format("0.000")
+									div(style="display:inline-block").stats= d.stats.w
+									div(style="display:inline-block").stats= d.stats.sv
+								-else
+									div(style="display:inline-block;width:7%").stats= d.stats.ab
+									div(style="display:inline-block;width:7%").stats= d.stats.h
+									div(style="display:inline-block;width:7%").stats= d.stats.bb
+									div(style="display:inline-block;width:7%").stats= d.stats.hr
+									div(style="display:inline-block;width:8%").stats= d.stats.r
+									div(style="display:inline-block;width:8%").stats= d.stats.rbi
+									div(style="display:inline-block;width:8%").stats= d.stats.sb
+									div(style="display:inline-block;width:8%").stats= d.stats.cs
+									div(style="display:inline-block;width:8%").stats= d.stats.h2b
+									div(style="display:inline-block;width:8%").stats= d.stats.h3b
+									div(style="display:inline-block;width:8%").stats= d.stats.go
+									div(style="display:inline-block;width:8%").stats= d.stats.ao
+									div(style="display:inline-block;width:8%").stats= d.stats.so
+
