--- a/views/partials/mlbSchedule.jade
+++ b/views/partials/mlbSchedule.jade
@@ -1,7 +1,7 @@
 h2 Today's Schedule
 div
 	-if(games && games.length > 0)
-		table
+		table.hoverable(style="width:100%")
 			thead
 				th(style="border-bottom:none")
 				th(style="border-bottom:none")
