--- a/views/player.jade
+++ b/views/player.jade
@@ -7,7 +7,26 @@ block inlineScripts
 			$.get("/api/player/gameLog/" + player._id, function(response) {
 				$('#playerStatsByDate').html(response.html);
 			});
+
+			$('#minorLeagueStats').html("<img src='/public/ajax-loader.gif' />");
+			$.get("/api/player/milb/" + player._id, function(response) {
+				if(response.html) {
+					$('#minorLeagueStats').html(response.html);
+					var playerImg = $('#playerImg');
+					if(playerImg.attr('src') == "/public/ajax-loader.gif") {
+						playerImg.attr('src', "http://www.milb.com/images/" + player.player_id + "/t" + response.bio.team_id + "/90x135/" + player.player_id + ".jpg");
+					}
+				} else {
+					$('#minorLeagueWidget').remove();
+				}
+			});
 		});
+
+		function imgError(image) {
+			image.onerror = "";
+			image.src = "/public/ajax-loader.gif";
+			return true;
+		}
 
 block content
 	include partials/teamLink
@@ -25,7 +44,7 @@ block content
 
 	section(id="left" style="width:50%")
 		div(style="padding:8px;margin:8px;text-align:center")
-			img.rounded(src="http://mlb.mlb.com/images/players/525x330/" + player.player_id + ".jpg")
+			img#playerImg.rounded(onerror="imgError(this);" src="http://mlb.mlb.com/images/players/525x330/" + player.player_id + ".jpg")
 
 		div(style="width:100%")
 			div.widget
@@ -41,6 +60,11 @@ block content
 						-contractYear++;
 					-}
 					p= "Locked up through " + lockedUpThrough
+
+		div(style="width:100%")
+			div.widget#minorLeagueWidget	
+				h2 Minor League Stats
+				div#minorLeagueStats(style="width:100%")
 
 	section(id="right" style="width:50%")
 		div(style="width:100%")
