more minor leaguer stuff

--- a/views/partials/minorLeagueInfo.jade
+++ b/views/partials/minorLeagueInfo.jade
@@ -3,18 +3,19 @@ div(style="width:100%")
 		= "Current Level: " + bio.leagueName + " (" + bio.team_name + ")"
 	-if(stats)
 		p Season Stats
-		-if(bio.primary_position != "P")
-			table(style="width:100%")
+		table(style="width:100%").hoverable
+			-if(bio.primary_position != "P")
 				thead
 					th.stats G
 					th.stats AB
-					th.stats H
 					th.stats HR
 					th.stats RBI
 					th.stats R
 					th.stats SB
 					th.stats BB
 					th.stats K
+					th.stats 2B
+					th.stats 3B
 					th.stats OBP
 					th.stats SLG
 					th.stats OPS
@@ -22,18 +23,18 @@ div(style="width:100%")
 					tr
 						td.stats= stats.g
 						td.stats= stats.ab
-						td.stats= stats.h
 						td.stats= stats.hr
 						td.stats= stats.rbi
 						td.stats= stats.r
 						td.stats= stats.sb
 						td.stats= stats.bb
 						td.stats= stats.so
+						td.stats= stats.h2b
+						td.stats= stats.h3b
 						td.stats= stats.obp
 						td.stats= stats.slg
 						td.stats= stats.ops
-		-else
-			table(style="width:100%")
+			-else
 				thead
 					th.stats G
 					th.stats GS
